--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <input type="text" id="url" name="url" placeholder="Enter URL">
+    <input type="text" id="url" name="url" placeholder="https://blocked.goguardian.com/?ctx=b2k9OTE4NjQxMzA0NyZvdT1odHRwJTNBJTJGJTJGd3d3Lmh5cGVydGFicy5jYyUyRiZycz1BRE1JTl9TSVRFX0NBVEVHT1JZX0ZJTFRFUiZzY2k9MjImc3Q9Y2hyb21pdW0tbSZ2PTE%3D&sum=1a5c79bb">
     <button onclick="generateIframe()">Go Gaurdian Bypass</button>
      <center> <h4> Some Sites Are Not Supported. </h4> 
     <b> <p style="color:lightcoral;"> Youtube Alternative: piped.video </p>   </b>
